@@ -1,3 +1,12 @@
+2008-05-22  Alp Toker  <alp@nuanti.com>
+
+        GTK+/DirectFB build fix attempt.
+
+        * plugins/PluginDatabase.cpp:
+        (WebCore::PluginDatabase::isPreferredPluginDirectory):
+        * plugins/gtk/PluginDatabaseGtk.cpp:
+        (WebCore::PluginDatabase::isPreferredPluginDirectory):
+
 2008-05-22  Timothy Hatcher  <timothy@apple.com>
 
         Adds Focus, Exclude and Restore buttons to the Profile view
